Fix navbar in mobile with overflow

--- a/src/component/index.css
+++ b/src/component/index.css
@@ -94,3 +94,8 @@ blockquote span{
   font-size: large;
   font-weight: bold;
 }
+
+.navbar-expand {
+  flex-flow: row wrap;
+  justify-content: center;
+}
